--- a/src/views/MainWindow/mainWindow.html
+++ b/src/views/MainWindow/mainWindow.html
@@ -9,16 +9,12 @@
     <link rel="stylesheet" href="../style.css">
 
     <script src="./view.js"></script>
-    <script src="./visualizador.js"></script>
 </head>
 
 <body>
     <div class="contenedor-main">
         <div class="d-flex contenedor-secund">
-            <div class="d-flex barra-opciones">
-                <button id="btn-rest-zoom" class="btn">- Zoom</button>
-                <button id="btn-add-zoom" class="btn">+ Zoom</button>
-            </div>
+            <button id="btn-test">Test</button>
             <div class="caja-dbj">
                 <div id="img-vista" style="background-image: url(../../img/img-pruebas.jpg)";></div>
             </div>
