--- a/src/views/style.css
+++ b/src/views/style.css
@@ -1,33 +1,58 @@
-body, html, .contenedor-main, .contenedor-secund, .barra-nm-imgs{
+body,
+html,
+.contenedor-main,
+.barra-nm-imgs {
     height: 100%;
     min-height: 100%;
 }
 
-.barra-nm-imgs{
+.barra-nm-imgs {
     width: 150px;
 }
-.barra-nm-img{
+
+.barra-nm-img {
     background: rgb(0, 110, 255);
 }
-.barra-nm-img:hover{
+
+.barra-nm-img:hover {
     background: rgb(185, 205, 231);
 }
 
-.caja-dbj{
+.caja-dbj {
     height: 100%;
     width: 100%;
     background: #000;
 }
 
-.barra-opciones{
-    background: rgb(185, 176, 176);
+#cont-opciones {
+    /*background: rgb(185, 176, 176);*/
+    overflow: auto;
 }
 
-#img-vista{
-    display: block;
+#img-vista {
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
