--- a/src/views/MainWindow/mainWindow.html
+++ b/src/views/MainWindow/mainWindow.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grand Pixel</title>
-    <link rel="stylesheet" href="../bootstrap.min.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../Styles/bootstrap.min.css">
+    <link rel="stylesheet" href="../Styles/style.css">
 
-    <script src="../bootstrap.min.js"></script>
+    <script src="../Styles/bootstrap.min.js"></script>
     <script src="./view.js"></script>
 </head>
 
