--- a/src/views/MainWindow/mainWindow.html
+++ b/src/views/MainWindow/mainWindow.html
@@ -14,8 +14,8 @@
 
 <body>
     <div class="contenedor-main overflow-hidden">
-        <div class="row h-100 mx-0 px-0">
-            <div id="cont-opciones" class="col-3 mx-0 d-block">
+        <div class="h-100 mx-0 px-0 d-flex">
+            <div id="cont-opciones" class="mx-0 d-block">
                 <div class="d-grid gap-2 mb-3">
                     <button class="btn btn-block" id="btn-test">Test</button>
                 </div>
@@ -25,32 +25,24 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#flush-collapseOne" aria-expanded="false"
                                 aria-controls="flush-collapseOne">
-                                Accordion Item #1
+                                Pixeleado
                             </button>
                         </h2>
                         <div id="flush-collapseOne" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Anim pariatur cliche reprehenderit, enim eiusmod high life
-                                accusamus terry richardson </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingTwo">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                aria-controls="flush-collapseTwo">
-                                Accordion Item #2
-                            </button>
-                        </h2>
-                        <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                            aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body">Anim pariatur cliche reprehenderit, enim eiusmod high life
-                                accusamus terry richardson ad</div>
+                            <div class="accordion-body">
+                                <div class="d-grid gap-2 mb-3">
+                                    <h6>Pixeleado 1: </h6>
+                                    <p>Tam Pixel:</p>
+                                    <input id="rng-pix-1" type="range" min="0" max="100">
+                                    <button id="btn-pix-1" class="">Aplicar</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-9 h-100 m-0 p-0">
+            <div class="w-100 h-100 m-0 p-0">
                 <div class="caja-dbj">
                     <div id="img-vista" style="background-image: url(../../img/img-pruebas.jpg)" ;></div>
                 </div>
