--- a/src/views/MainWindow/mainWindow.html
+++ b/src/views/MainWindow/mainWindow.html
@@ -13,11 +13,15 @@
 </head>
 
 <body>
-    <div class="contenedor-main overflow-hidden">
-        <div class="h-100 mx-0 px-0 d-flex">
+    <div class="contenedor-main">
+        <div id="menu" class="bg-success d-block">
+            lel
+        </div>
+        <div id="cont-workbench" class="d-block mx-0 px-0 d-flex">
             <div id="cont-opciones" class="mx-0 d-block">
                 <div class="d-grid gap-2 mb-3">
-                    <button class="btn btn-block" id="btn-test">Test</button>
+                    <button class="btn btn-danger" id="btn-load-img">Cargar</button>
+                    <button class="btn btn-dark" id="btn-test">Test</button>
                 </div>
                 <div class="accordion accordion-flush" id="accordionFlushExample">
                     <div class="accordion-item">
