--- a/src/views/Styles/style.css
+++ b/src/views/Styles/style.css
@@ -1,7 +1,4 @@
-body,
-html,
-.contenedor-main,
-.barra-nm-imgs {
+body, html, .contenedor-main {
     height: 100%;
     min-height: 100%;
 }
@@ -13,7 +10,6 @@ html,
 }
 
 #cont-opciones {
-    background: rgb(185, 176, 176);
     overflow: auto;
     width: 300px;
     min-width: 300px;
@@ -27,6 +23,18 @@ html,
     background-position: center;
 }
 
+#menu{
+    height: 40px;
+}
+
+.txt-number{
+    width: 70px;
+}
+
+#menu-img{
+    height: 100%;
+    width: auto;
+}
 
 /*Scrollbar*/
 /* width */
@@ -47,4 +55,8 @@ html,
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+
+html {
+    font-size: 1rem;
 }
