--- a/src/views/MainWindow/mainWindow.html
+++ b/src/views/MainWindow/mainWindow.html
@@ -14,15 +14,17 @@
 
 <body>
     <div class="contenedor-main">
-        <div id="menu" class="bg-success d-block">
-            <button class="" style="height: 100%; width: 40px;">
-                <img class="img-fluid menu-img" src="../../img/appIcon.png" alt="">
+        <div id="menu" class="d-block">
+            <button class="btn menu-btn">
+                <img class="menu-img" src="../../img/save-img.svg">
+            </button>
+            <button class="btn menu-btn">
+                <img id="btn-load-img" class="menu-img" src="../../img/upload-img.svg">
             </button>
         </div>
         <div id="cont-workbench" class="d-block mx-0 px-0 d-flex">
             <div id="cont-opciones" class="mx-0 d-block">
                 <div class="d-grid gap-2 mb-3 px-3 pt-3">
-                    <button class="btn btn-dark" id="btn-load-img">Cargar</button>
                     <button class="btn btn-dark" id="btn-test">Test</button>
                 </div>
                 <div class="accordion" id="accordionFlushExample">
