--- a/src/views/Styles/style.css
+++ b/src/views/Styles/style.css
@@ -25,15 +25,23 @@ body, html, .contenedor-main {
 
 #menu{
     height: 40px;
+    padding-left: 10px;
+    background-color: aquamarine;
 }
 
 .txt-number{
     width: 70px;
 }
 
-#menu-img{
+.menu-img{
     height: 100%;
-    width: auto;
+}
+
+.menu-btn{
+    height: 100%;
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 /*Scrollbar*/
