--- a/src/views/Styles/style.css
+++ b/src/views/Styles/style.css
@@ -15,6 +15,10 @@ body, html, .contenedor-main {
     min-width: 300px;
 } 
 
+#load-animation{
+    position: relative;
+}
+
 #img-vista {
     width: 100%;
     height: 100%;
