--- a/src/views/MainWindow/mainWindow.html
+++ b/src/views/MainWindow/mainWindow.html
@@ -13,14 +13,17 @@
 
     <div class="contenedor-main">
         <div id="menu" class="d-block">
-            <button id="btn-save" class="btn menu-btn">
+            <button id="btn-save" title="Save" class="btn menu-btn">
                 <img class="menu-img" src="../../img/save-img.svg">
             </button>
-            <button id="btn-load-img" class="btn menu-btn">
+            <button id="btn-load-img" title="Load Image" class="btn menu-btn">
                 <img class="menu-img" src="../../img/upload-img.svg">
             </button>
-            <button id="btn-reset" class="btn menu-btn">
+            <button id="btn-reset" title="Reset to original img" class="btn menu-btn">
                 <img class="menu-img" src="../../img/reset-img.svg">
+            </button>
+            <button id="btn-undo-test" title="Undo Test" class="btn menu-btn">
+                <img class="menu-img" src="../../img/undo-test.svg">
             </button>
         </div>
         <div id="cont-workbench" class="d-block mx-0 px-0 d-flex">
@@ -60,9 +63,20 @@
                     </div>
                 </div>
             </div>
-            <div class="w-100 h-100 m-0 p-0">
+            <div class="w-100 h-100 m-0 p-0 position-relative">
+
+                <!--NO IMAGE BACKGOUND-->
+                <div id="no-img-background">
+                    <img src="../../img/no-image-icon.png" alt="">
+                </div>
+
+                <!--LOADING ANIMATION-->
+                <div id="loading-animation">
+                    <img src="../../img/loading-gif.gif" width="90px" alt="">
+                </div>
+                
                 <div class="caja-dbj">
-                    <div id="img-vista" style="background-image: url(../../img/img-pruebas.jpg)"></div>
+                    <div id="img-vista"></div>
                 </div>
             </div>
         </div>
