--- a/src/views/Styles/style.css
+++ b/src/views/Styles/style.css
@@ -6,7 +6,8 @@ body, html, .contenedor-main {
 .caja-dbj {
     height: 100%;
     width: 100%;
-    background: rgb(0, 0, 0);
+    /*background: rgb(0, 0, 0);*/
+    background: #0e0e0e;
 }
 
 #cont-opciones {
@@ -14,6 +15,16 @@ body, html, .contenedor-main {
     width: 300px;
     min-width: 300px;
 } 
+
+#no-img-background{
+    background-color: rgb(70, 70, 70);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
 
 #load-animation{
     position: relative;
@@ -46,6 +57,17 @@ body, html, .contenedor-main {
     display: inline-block;
     padding-left: 5px;
     padding-right: 5px;
+    width: 40px;
+}
+
+#loading-animation{
+    background-color: rgba(35, 39, 39, 0.753);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    display: none;
 }
 
 /*Scrollbar*/
