Se agrego una nimacion de carga cuando se carga la aplicacion por primera vez para que esta no muestre los componenetes de html cargando

--- a/src/views/Styles/style.css
+++ b/src/views/Styles/style.css
@@ -24,6 +24,18 @@ body, html, .contenedor-main {
     justify-content: center;
     align-items: center;
     display: flex;
+    z-index: 1;
+}
+
+#animacion-loading-app{
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    z-index: 3;
 }
 
 #load-animation{
@@ -68,6 +80,7 @@ body, html, .contenedor-main {
     justify-content: center;
     align-items: center;
     display: none;
+    z-index: 2;
 }
 
 /*Scrollbar*/
