--- a/src/views/MainWindow/mainWindow.html
+++ b/src/views/MainWindow/mainWindow.html
@@ -11,20 +11,33 @@
 
 <body>
 
-    <div class="contenedor-main">
-        <div id="menu" class="d-block">
-            <button id="btn-save" title="Save" class="btn menu-btn">
-                <img class="menu-img" src="../../img/save-img.svg">
-            </button>
-            <button id="btn-load-img" title="Load Image" class="btn menu-btn">
-                <img class="menu-img" src="../../img/upload-img.svg">
-            </button>
-            <button id="btn-reset" title="Reset to original img" class="btn menu-btn">
-                <img class="menu-img" src="../../img/reset-img.svg">
-            </button>
-            <button id="btn-undo-test" title="Undo Test" class="btn menu-btn">
-                <img class="menu-img" src="../../img/undo-test.svg">
-            </button>
+    <div class="contenedor-main position-relative">
+
+        <!--ANIMACION DE CARGADO DE APLICACION-->
+        <div id="animacion-loading-app" class="overflow-hidden">
+            <img src="../../img/loading-app-gif.gif" alt="">
+        </div>
+
+        <div id="menu" class="d-flex justify-content-between">
+            <div class="">
+                <button id="btn-save" title="Save" class="btn menu-btn">
+                    <img class="menu-img" src="../../img/save-img.svg">
+                </button>
+                <button id="btn-load-img" title="Load Image" class="btn menu-btn">
+                    <img class="menu-img" src="../../img/upload-img.svg">
+                </button>
+                <button id="btn-reset" title="Reset to original img" class="btn menu-btn">
+                    <img class="menu-img" src="../../img/reset-img.svg">
+                </button>
+                <button id="btn-undo-test" title="Undo Test" class="btn menu-btn">
+                    <img class="menu-img" src="../../img/undo-test.svg">
+                </button>
+            </div>
+            <div class="">
+                <button id="btn-info" title="Undo Test" class="btn menu-btn">
+                    <img class="menu-img" src="../../img/info-img.svg">
+                </button>
+            </div>
         </div>
         <div id="cont-workbench" class="d-block mx-0 px-0 d-flex">
             <div id="cont-opciones" class="mx-0 d-block">
@@ -66,12 +79,12 @@
             <div class="w-100 h-100 m-0 p-0 position-relative">
 
                 <!--NO IMAGE BACKGOUND-->
-                <div id="no-img-background">
-                    <img src="../../img/no-image-icon.png" alt="">
+                <div id="no-img-background" class="overflow-hidden">
+                    <img width="300px" src="../../img/no-image-icon.png" alt="">
                 </div>
 
                 <!--LOADING ANIMATION-->
-                <div id="loading-animation">
+                <div id="loading-animation" class="overflow-hidden">
                     <img src="../../img/loading-gif.gif" width="90px" alt="">
                 </div>
                 
