--- a/src/views/MainWindow/mainWindow.html
+++ b/src/views/MainWindow/mainWindow.html
@@ -20,16 +20,16 @@
 
         <div id="menu" class="d-flex justify-content-between">
             <div class="">
-                <button id="btn-save" title="Save" class="btn menu-btn">
+                <button onclick="guardarImagen()" id="btn-save" title="Save" class="btn menu-btn">
                     <img class="menu-img" src="../../img/save-img.svg">
                 </button>
-                <button id="btn-load-img" title="Load Image" class="btn menu-btn">
+                <button onclick="cambiarImagen()" id="btn-load-img" title="Load Image" class="btn menu-btn">
                     <img class="menu-img" src="../../img/upload-img.svg">
                 </button>
-                <button id="btn-reset" title="Reset to original img" class="btn menu-btn">
+                <button onclick="resetImgToOriginal()" id="btn-reset" title="Reset to original img" class="btn menu-btn">
                     <img class="menu-img" src="../../img/reset-img.svg">
                 </button>
-                <button id="btn-undo-test" title="Undo Test" class="btn menu-btn">
+                <button onclick="undoTest()" id="btn-undo-test" title="Undo Test" class="btn menu-btn">
                     <img class="menu-img" src="../../img/undo-test.svg">
                 </button>
             </div>
@@ -42,7 +42,7 @@
         <div id="cont-workbench" class="d-block mx-0 px-0 d-flex">
             <div id="cont-opciones" class="mx-0 d-block">
                 <div class="d-grid gap-2 mb-3 px-3 pt-3">
-                    <button class="btn btn-dark" id="btn-test">Test</button>
+                    <button onclick="test()" class="btn btn-dark" id="btn-test">Test</button>
                 </div>
                 <div class="accordion" id="accordionFlushExample">
                     <div class="accordion-item">
@@ -61,13 +61,13 @@
                                         <p class="d-block m-0">Tam Pixel:</p>
                                         <input id="lbl-pix-1" class="d-block txt-number" disabled="false" type="number">
                                     </div>
-                                    <input id="rng-pix-1" type="range" min="0" max="100">
+                                    <input oninput="rangeEventPix1()" id="rng-pix-1" type="range" min="0" max="100">
                                     <div class="row">
                                         <div class="col-6">
-                                            <button id="btn-test-pix-1" class="btn btn-dark w-100">Test</button>
+                                            <button onclick="testearPixelado1()" id="btn-test-pix-1" class="btn btn-dark w-100">Test</button>
                                         </div>
                                         <div class="col-6">
-                                            <button id="btn-pix-1" class="btn btn-primary w-100">Aplicar</button>
+                                            <button onclick="aplicarPixeleado1()" id="btn-pix-1" class="btn btn-primary w-100">Aplicar</button>
                                         </div>
                                     </div>
                                 </div>
