--- a/src/views/InfoWindow/infoWindow.html
+++ b/src/views/InfoWindow/infoWindow.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanks To</title>
+
+    <link rel="stylesheet" href="../Styles/bootstrap.min.css">
+    <link rel="stylesheet" href="../Styles/style.css">
 </head>
+
 <body>
-    <h1>THANKS TO</h1>
+
+    <div id="header-info" class="container-fluid">
+        <h1> &#10084; ATTRIBUTIOS &#10084;</h1>
+    </div>
+
+    <div class="container pt-3 px-3">
+        <div>
+            <u><h3>App created by:</h3></u>
+        </div>
+            <ul>
+                <li><h4 class="text-muted">Luis Roberto P.V</h4></li>
+            </ul>
+        <div>
+            <u><h3>Icons made by:</h3></u>
+        <ul>
+            <li><a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
+                    href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></li>
+            <li><a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a
+                    href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></li>
+            <li><a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a
+                    href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></li>
+            <li><a href="https://www.flaticon.com/authors/vitaly-gorbachev" title="Vitaly Gorbachev">Vitaly
+                    Gorbachev</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></li>
+            <li><a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect">Pixel perfect</a>
+                from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></li>
+            <li><a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
+                    href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></li>
+        </ul>
+        </div>
+
+
+
+    </div>
+
+    <script src="../Styles/bootstrap.min.js"></script>
+    <script src="./view.js"></script>
 </body>
+
 </html>
