--- a/src/views/MainWindow/mainWindow.html
+++ b/src/views/MainWindow/mainWindow.html
@@ -43,7 +43,7 @@
         <div id="cont-workbench" class="d-block mx-0 px-0 d-flex">
             <div id="cont-opciones" class="mx-0 d-block">
                 <div class="d-grid gap-2 mb-3 px-3 pt-3">
-                    <button onclick="test()" class="btn btn-dark" id="btn-test">Test</button>
+                    <button onclick="motivacion()" class="btn btn-dark" id="btn-motivacion">Motivacion</button>
                 </div>
                 <div class="accordion" id="accordionFlushExample">
                     <div class="accordion-item">
@@ -291,6 +291,11 @@
                 <!--LOADING ANIMATION-->
                 <div id="loading-animation" class="overflow-hidden">
                     <img src="../../img/loading-gif.gif" width="90px" alt="">
+                </div>
+
+                <!--MOTIVATIONAL ANIMATION-->
+                <div id="motivational-animation" class="overflow-hidden">
+                    <img src="../../img/motivacion1.gif" width="320px" alt="">
                 </div>
 
                 <div class="caja-dbj">
