--- a/src/views/Styles/style.css
+++ b/src/views/Styles/style.css
@@ -91,6 +91,17 @@ body, html, .contenedor-main {
     z-index: 2;
 }
 
+#motivational-animation{
+    background-color: rgb(35, 39, 39);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    z-index: 4;
+}
+
 /*Scrollbar*/
 /* width */
 ::-webkit-scrollbar {
